--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Andrew F Xylem</title>
-    <link rel="stylesheet" href="./assets/styles/ppa_styles.css">
+    <link rel="stylesheet" href="./assets/styles/styles.css">
   </head>
   <body>
     <main>
